# byte_stacker

./: .gitignore  CMakeLists.txt  README.md  protocol.md
byte_stacker_in/: CMakeLists.txt  byte_stacker_in.cpp  byte_stacker_in.h  inlink.cpp  inlink.h
byte_stacker_out/: .gitignore  CMakeLists.txt  byte_stacker_out.cpp  byte_stacker_out.h  outlink.cpp  outlink.h
common/: data.h  outlink.cpp  outlink.h  parser.cpp  parser.h  trace.h  trunklink.cpp  trunklink.h
misc/: windows_build.bat  windows_build_in.bat  windows_build_in_inc.bat  windows_build_out_full.bat  windows_build_out_inc.bat
tests/: CMakeLists.txt  close_connect.cpp  fixture_direct_pipe.cpp  fixture_direct_pipe.h  prompt_close_connect.txt  prompt_set_connect.txt  set_connect.cpp  single_byte_transfer.cpp
